增加便笺输入数量

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -11,6 +11,7 @@
       bindblur='blurTextArea'
       bindfocus='focusTextArea'
       value='{{content}}'
+      maxlength='100000'
       />
     </view>
 
