--- a/pages/allMyNotes/allMyNotes.wxml
+++ b/pages/allMyNotes/allMyNotes.wxml
@@ -1,6 +1,6 @@
 <view class='container'>
   <view wx:if="{{listLen > 0}}">
-    <view class='single-note-wrap'  wx:for="{{notesList}}" bindtap='goToDetail' data-id="{{item._id}}" wx:key="*this">
+    <view class='single-note-wrap'  wx:for="{{notesList}}" bindtap='goToDetail' data-id="{{item._id}}" wx:key="_id">
       <view class='single-note-top'>
         <text space="nbsp" class='single-note-content' >{{item.content}}</text>
       </view>
