--- a/app.wxss
+++ b/app.wxss
@@ -5,3 +5,8 @@
   align-items: center;
   box-sizing: border-box;
 } 
+view,image,text,navigator{
+  box-sizing: border-box;
+  padding:0;
+  margin:0;
+}
