--- a/pages/allMyNotes/allMyNotes.wxml
+++ b/pages/allMyNotes/allMyNotes.wxml
@@ -1,3 +1,6 @@
+<!-- <import src="/pages/template/template.wxml"/>
+<template is="tabBar" data="{{tabBar:bindData.tabBar}}"/> -->
+
 <view class='container'>
   <view wx:if="{{listLen > 0}}" style="margin-bottom: 20rpx;">
     <view class='single-note-wrap'  wx:for="{{notesList}}" bindtap='goToDetail' data-id="{{item._id}}" wx:key="_id">
@@ -12,3 +15,5 @@
   </view>
 
 </view>
+
+<tabbar tabbar="{{tabbar}}"></tabbar>
