--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,6 @@
 <!--index.wxml-->
+<import src="../../template/template.wxml"/>
+<template is="tabBar" data="{{tabBar:bindData.tabBar}}"/>
 <view class="container">
     
 
