--- a/miniprogram/pages/my/my.wxss
+++ b/miniprogram/pages/my/my.wxss
@@ -1,12 +1,16 @@
 /* pages/my/myt.wxss */
+page {
+  background: #F6F6F6;
+}
 .head{
-  border-top: 1rpx rgb(242, 242, 242) solid;
+  /* border-bottom: 1rpx #F6F6F6 solid; */
   height: 190rpx;
   padding: 0 30rpx;
   display: flex;
   align-items: center;
   background: #fff;
   width: 100%;
+  margin-bottom: 10rpx;
 }
 .user-avatar{
   overflow:hidden;
@@ -20,7 +24,47 @@
   margin-right: 50rpx; 
 }
 .user-nick {
-font-size: 34rpx;
-font-weight: bold;
-color: rgba(51,51,51,1);
+  font-size: 34rpx;
+  font-weight: bold;
+  color: rgba(51,51,51,1);
+
+}
+.inner{
+  width: 100%;
+  display: flex;
+  height: 160rpx;
+  /* border-top: 2rpx rgb(242, 242, 242) solid; */
+  background: #fff;
+  margin-bottom: 10rpx; 
+}
+.inner_item{
+  flex: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.inner_item image{
+  width: 40rpx;
+  height: 40rpx;
+}
+.inner_item text{
+  font-size: 24rpx;
+  color: rgb(51, 51, 51);
+  margin-top: 16rpx;
+}
+.list {
+  width: 100%;
+}
+.list-item {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100rpx;
+  background: #fff;
+  padding: 0 40rpx;
+}
+.list-item text {
+  font-size: 28rpx;
+  line-height: 100rpx;
 }
