--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -20,20 +20,20 @@ page {
   box-sizing: border-box;
   padding: 20rpx 20rpx 10rpx;
   width: 710rpx;
-  margin: 14px auto 0;
-  border-radius: 4px;
+  margin: 0 auto;
+  /* border-radius: 4px; */
   background: #fff;
-  box-shadow: 5rpx 10rpx 20rpx #eee,-5rpx 0 20rpx #eee;
+  /* box-shadow: 5rpx 10rpx 20rpx #eee,-5rpx 0 20rpx #eee; */
   font-weight: 200;
   text-align: left;
   
   height: 600rpx;
   overflow: hidden;
 }
-.xt-textarea.focus {
+/* .xt-textarea.focus {
   box-shadow:5rpx 10rpx 20rpx #cecece, -5rpx 0 20rpx #CECECE;
   transition: all .5s;
-}
+} */
 
 .xt-button-circle {
   position: absolute;
