--- a/miniprogram/pages/allMyNotes/allMyNotes.wxss
+++ b/miniprogram/pages/allMyNotes/allMyNotes.wxss
@@ -2,30 +2,65 @@ page {
   background: #f6f6f6;
 }
 .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
   padding-bottom: 120rpx;
-  
+  height: 100%;
+}
+.ainimation {
+  transition: all .5s;
+  -webkit-transition: all .5s;
 }
 .container.iphoneX {
   padding-bottom: 186rpx;
 }
 .container .wrap {
-  /* margin-top: 10rpx; */
+  margin-top: 2rpx;
   background: #fff;
   width: 100%;
 }
+.create-new-btn {
+  background: rgb(60, 152, 158);
+  color: #fff;
+}
+
 .single-note-wrap {
+  position: relative;
   box-sizing: border-box;
-  padding: 20rpx 20rpx 10rpx;
-  width: 690rpx;
-  margin: 0 auto;
+  
+  /* width: 720rpx; */
+  width: 100%;
+  /* margin: 0 0 0 30rpx; */
   /* border-radius: 4px; */
-  background: #fff;
+  /* background: #fff; */
   /* box-shadow: 5rpx 10rpx 20rpx #eee,-5rpx 0 20rpx #eee; */
   font-weight: 400;
   text-align: left;
+  overflow: hidden;
+}
+.single-note-cover {
+  position: relative;
+  /* position: absolute; */
+  padding: 20rpx 40rpx 10rpx 0;
+  margin-left: 40rpx;
+  width: 710rpx;
   border-bottom: 1px solid #f6f6f6;
 }
-
+.single-note-delete {
+  position: absolute;
+  display: flex;
+  width: 150rpx;
+  height: 100%;
+  right: -150rpx;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+  background: #fd4938;
+  color: #fff;
+  z-index: 50;
+}
 .single-note-top {
   /* max-height: 400rpx; */
   overflow: hidden;
