--- a/miniprogram/pages/allMyNotes/allMyNotes.wxml
+++ b/miniprogram/pages/allMyNotes/allMyNotes.wxml
@@ -3,18 +3,35 @@
 
 <view class='container {{isIphoneX? "iphoneX": ""}}'>
   <view class='wrap' wx:if="{{listLen > 0}}" style="margin-bottom: 20rpx;">
-    <view class='single-note-wrap'  wx:for="{{notesList}}" bindtap='goToDetail' data-id="{{item._id}}" wx:key="_id">
-      <view class='single-note-top'>
-        <text space="nbsp" class='single-note-content' >{{item.title}}</text>
+    <view 
+    class='single-note-wrap'  
+    wx:for="{{notesList}}" 
+    wx:key="_id"
+    catchtouchmove='{{preventScroll? "preventScroll":""}}'
+    >
+      <view 
+      class='single-note-cover {{(addAnimation || moveIdx!=index)? "ainimation": ""}}'
+      bindtap='goToDetail' 
+      data-id="{{item._id}}" 
+      data-index="{{index}}"
+      bindtouchstart='itemTouchStart'
+      bindtouchmove='{{preventMove? "preventScroll":"itemTouchMove"}}'
+      bindtouchend='itemTouchEnd'
+      style='{{moveIdx == index? "transform:translate(-"+ itemLeft + "px)":""}}'>
+        <view class='single-note-top'>
+          <text space="nbsp" class='single-note-content' >{{item.title}}</text>
+        </view>
+        <view class='single-note-sub' wx:if="{{item.subTitle}}">
+          <text space="nbsp" class='single-note-content' >{{item.subTitle}}</text>
+        </view>
+        <view class='single-note-bottom single-note-date'>{{item.created_at}}</view> 
+        <view class='single-note-delete' catchtap='deleteNote' data-id="{{item._id}}">删除</view>
       </view>
-      <view class='single-note-sub' wx:if="{{item.subTitle}}">
-        <text space="nbsp" class='single-note-content' >{{item.subTitle}}</text>
-      </view>
-      <view class='single-note-bottom single-note-date'>{{item.created_at}}</view> 
+      
     </view>
   </view>
   <view wx:elif="{{listLen <= 0 && loaded}}" class='no-note'>
-    <button bindtap='navigateBack'>添加一个便签</button>
+    <button class='create-new-btn'  bindtap='createNew'>新建一个便签</button>
   </view>
 
 </view>
