--- a/miniprogram/pages/allMyNotes/allMyNotes.wxss
+++ b/miniprogram/pages/allMyNotes/allMyNotes.wxss
@@ -2,9 +2,6 @@ page {
   background: #f6f6f6;
 }
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
   padding-bottom: 120rpx;
   height: 100%;
@@ -22,6 +19,11 @@ page {
   width: 100%;
 }
 .create-new-btn {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
   background: rgb(60, 152, 158);
   color: #fff;
 }
