--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
-<view class="container">
+<view class="container" catchtouchmove='""'>
     
 
     <view class="section">
@@ -12,6 +12,7 @@
       value='{{content}}'
       maxlength='10000'
       style="height: {{taHeight + 'px'}}"
+      catchtouchmove='""'
       />
       <cover-view catchtap="uploadNote" class='xt-button-circle'>提交</cover-view>
     </view>
