--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -14,7 +14,7 @@
       style="height: {{taHeight + 'px'}}"
       catchtouchmove='preventScroll'
       />
-      <cover-view catchtap="uploadNote" class='xt-button-circle'>提交</cover-view>
+      <!-- <cover-view catchtap="uploadNote" class='xt-button-circle'>提交</cover-view> -->
     </view>
 
     <!-- <button bindtap="uploadNote" class='xt-button-circle'>提交</button> -->
