修改编辑便签样式

--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -18,8 +18,8 @@ page {
   padding: 0;
 }
 .xt-textarea {
-  box-sizing: border-box;
-  padding: 20rpx 0rpx 10rpx;
+  box-sizing: content-box;
+  padding: 20rpx 0rpx 20rpx;
   width: 710rpx;
   margin: 0 20rpx;
   /* border-radius: 4px; */
@@ -27,9 +27,8 @@ page {
   /* box-shadow: 5rpx 10rpx 20rpx #eee,-5rpx 0 20rpx #eee; */
   font-weight: 200;
   text-align: left;
-  
-  /* overflow: hidden; */
-  /* padding-bottom: 126rpx; */
+  line-height: 50rpx;
+  font-size: 34rpx;
 }
 /* .xt-textarea.focus {
   box-shadow:5rpx 10rpx 20rpx #cecece, -5rpx 0 20rpx #CECECE;
