--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
-<view class="container" bindtouchmove='preventScroll'>
+<view class="container">
     
 
     <view class="section">
@@ -11,7 +11,7 @@
       bindfocus='focusTextArea'
       value='{{content}}'
       maxlength='10000'
-      style="height: {{taHeight + 'px'}}"
+      auto-height="true"
       catchtouchmove='preventScroll'
       />
       <!-- <cover-view catchtap="uploadNote" class='xt-button-circle'>提交</cover-view> -->
