--- a/miniprogram/pages/allMyNotes/allMyNotes.wxml
+++ b/miniprogram/pages/allMyNotes/allMyNotes.wxml
@@ -17,7 +17,8 @@
       bindtouchstart='itemTouchStart'
       bindtouchmove='{{preventMove? "preventScroll":"itemTouchMove"}}'
       bindtouchend='itemTouchEnd'
-      style='{{moveIdx == index? "transform:translate(-"+ itemLeft + "px)":""}}'>
+      style='{{moveIdx == index? "transform:translate(-"+ itemLeft + "px)":""}}'
+      wx:if="{{!tempDelObj[index]}}">
         <view class='single-note-top'>
           <text space="nbsp" class='single-note-content' >{{item.title}}</text>
         </view>
@@ -25,15 +26,17 @@
           <text space="nbsp" class='single-note-content' >{{item.subTitle}}</text>
         </view>
         <view class='single-note-bottom single-note-date'>{{item.updated_at}}</view> 
-        <view class='single-note-delete' catchtap='deleteNote' data-id="{{item._id}}">删除</view>
+        <view class='single-note-delete' catchtap='deleteNote' data-id="{{item._id}}" data-index="{{index}}">删除</view>
       </view>
       
     </view>
+    <!-- <view class='end-line'>---我是有底线的---</view> -->
   </view>
   <view wx:elif="{{listLen <= 0 && loaded}}" class='no-note'>
     <button class='create-new-btn'  bindtap='createNew'>新建一个便签</button>
   </view>
 
 </view>
+
 
 <tabbar tabbar="{{tabbar}}"></tabbar>
