--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -15,6 +15,7 @@
       auto-focus="{{isFocus}}"
       catchtouchmove='preventScroll'
       style='height: {{taHeight}}px'
+      disabled='{{isShared}}'
       />
       <!-- <cover-view catchtap="uploadNote" class='xt-button-circle'>提交</cover-view> -->
     </view>
