--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -4,6 +4,7 @@ page {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    height: 100%;
 }
 .animation {
   transition: all .5s;
@@ -11,6 +12,7 @@ page {
 .container {
   position: relative;
   overflow: hidden;
+  height: 100%;
 }
 .section {
   position: relative;
@@ -93,4 +95,13 @@ page {
   height: 100rpx;
   width: 100%;
   background: #fff;
+}
+.tools {
+  position: absolute;
+  width: 200rpx;
+  height: 80rpx;
+  background: gray;
+  right: 0;
+  bottom: 200rpx;
+
 }
