--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -20,7 +20,11 @@
       
       <!-- <cover-view catchtap="uploadNote" class='xt-button-circle'>提交</cover-view> -->
     </view>
-    <!-- <cover-view class='tools'></cover-view> -->
+    <cover-view class='tools' catchtap='toolsTap' animation="{{animationData}}">
+      <cover-view class='tools-item tools-item-1'>
+        <cover-image class='arrow' src='/images/back.png'></cover-image>
+      </cover-view>
+    </cover-view>
     <view class='footer' wx:if="{{isEditFlag}}"></view>
 
     <!-- <button bindtap="uploadNote" class='xt-button-circle'>提交</button> -->
