--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -29,5 +29,6 @@
         <text>v1.1.2</text>
       </view>
     </view>
+    <ad unit-id="adunit-5f226e5b28d9bd8f"></ad>
 </view>
 <tabbar tabbar="{{tabbar}}"></tabbar>
